fixtures/corpus/invalid/dto-missing-props.rune
[DTO] FooDto
    a DTO declaration with no properties
